# libmumble_protocol

./: .clang-format  .gitignore  .gitlab-ci.yml  BoostTestHelpers.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-macos.yaml  cmake-multi-platform.yml  cmake-ubuntu.yaml  cmake-windows.yaml
build-container/: Dockerfile  build.sh
client/: CMakeLists.txt
client/app/: main.cpp
client/lib/: client.cpp  client.hpp
client/src/: application.manifest  main.cpp
common/: CMakeLists.txt
common/src/: MumbleUDP.proto  packet.cpp  packet.hpp  packet_definition.hpp  pimpl.hpp  pimpl_impl.hpp  util.cpp  util.hpp
common/test/: util.cpp
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/src/: mumble_protocol.cppm  mumble_protocol_client.cppm  mumble_protocol_packet.cppm  mumble_protocol_server.cppm  mumble_protocol_utility.cppm
lib/test/: util.cpp
mumble_protocol/: CMakeLists.txt  Mumble.proto
mumble_protocol/src/: client.cpp  client.hpp  packet.cpp  packet.hpp  pimpl.hpp  pimpl_impl.hpp  server.cpp  server.hpp  util.cpp  util.hpp
mumble_protocol/test/: util.cpp
server/: CMakeLists.txt
server/app/: main.cpp
server/lib/: server.cpp  server.hpp
server/src/: application.manifest  main.cpp
src/: CMakeLists.txt  core.cpp  core.hpp  temp.cpp
src/core/: Client.cpp  Client.h
src/packet/: CMakeLists.txt  tcp_packet.cpp  tcp_packet.hpp
src/protocol/: CMakeLists.txt  control.cpp  control.hpp  protocol.h  util.cpp  util.h  voice.cpp  voice.hpp  voice_data.cpp  voice_data.hpp
src/protocol/control/: Header.cpp  Header.h  VersionPacket.h  declarations.h
test/: CMakeLists.txt  main.cpp
test/protocol/: main.cpp  voice.cpp
